long note titles does not fit in drag and drop boxes solved

--- a/web/public/css/styles.css
+++ b/web/public/css/styles.css
@@ -147,6 +147,7 @@ select{
   height: 34px;
   margin: 10px 20px;
   padding: 15px;
+  overflow: hidden;
 
 }
 
